--- a/bash/local/.inputrc
+++ b/bash/local/.inputrc
@@ -17,7 +17,7 @@ set mark-symlinked-directories on
 # "\e[A": history-search-backward
 
 # Do not autocomplete hidden files unless the pattern explicitly begins with a dot
-set match-hidden-files off
+set match-hidden-files on
 
 # Show all autocomplete results at once
 set page-completions off
@@ -42,3 +42,8 @@ set convert-meta off
 
 # Use Alt/Meta + Delete to delete the preceding word
 "\e[3;3~": kill-word
+
+## arrow up
+"\e[A":history-search-backward
+## arrow down
+"\e[B":history-search-forward
